--- a/prototype/styles/_title.scss
+++ b/prototype/styles/_title.scss
@@ -1,12 +1,12 @@
 .title {
   margin: 0;
 
-  font-size: 27px;
+  font-size: 1.6875rem;
   font-weight: bold;
 }
 
 @media screen and (min-width: 520px) {
   .title {
-    font-size: 80px;
+    font-size: 5rem;
   }
 }
