Prototype the button

--- a/prototype/styles/_colors.scss
+++ b/prototype/styles/_colors.scss
@@ -1,6 +1,8 @@
-$floralWhite: #faf8ef;
+$floralWhite1: #f9f6f2;
+$floralWhite2: #faf8ef;
 $gallery: #d8d4d0;
 $sandstone: #776e65;
 $silk: #bbada0;
 $springWood: #eee4da;
+$squirrel: #8f7a66;
 $white: white;
