--- a/prototype/styles/_base.scss
+++ b/prototype/styles/_base.scss
@@ -14,7 +14,7 @@
 
 body {
   font-family: fonts.$clearSans;
-  background-color: colors.$floralWhite;
+  background-color: colors.$floralWhite2;
   color: colors.$sandstone;
 }
 
