Prototype the introduction

--- a/prototype/styles/_button.scss
+++ b/prototype/styles/_button.scss
@@ -9,6 +9,7 @@
 
   font-size: inherit;
   font-weight: bold;
+  white-space: nowrap;
 
   background-color: colors.$squirrel;
   color: colors.$floralWhite1;
