--- a/prototype/styles/index.scss
+++ b/prototype/styles/index.scss
@@ -1,10 +1,11 @@
 @use "base";
 @use "title";
 @use "score";
-@use "score-container";
+@use "score-card";
 @use "header";
 @use "paragraph";
 @use "separator";
 @use "button";
 @use "introduction";
 @use "grid";
+@use "main";
