--- a/prototype/styles/_grid.scss
+++ b/prototype/styles/_grid.scss
@@ -2,11 +2,14 @@
 @use "colors";
 
 .grid__background {
-  width: 500px;
-  height: 500px;
+  // width: 500px;
+  // height: 500px;
+  width: 280px;
+  height: 280px;
 
   border-radius: 6px;
-  padding: 15px;
+  padding: 10px;
+  // padding: 15px;
 
   background-color: colors.$silk;
 }
@@ -17,7 +20,8 @@
 
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 15px;
+  // gap: 15px;
+  gap: 10px;
 }
 
 .grid__cell {
