--- a/prototype/styles/_base.scss
+++ b/prototype/styles/_base.scss
@@ -8,8 +8,14 @@
 }
 
 :root {
-  font-size: 18px;
+  font-size: 15px;
   line-height: 1.5;
+}
+
+@media screen and (min-width: 520px) {
+  :root {
+    font-size: 18px;
+  }
 }
 
 body {
