Refactor the prototype

--- a/prototype/styles/index.scss
+++ b/prototype/styles/index.scss
@@ -1,9 +1,9 @@
 @use "base";
+@use "immutable";
 @use "title";
 @use "score";
 @use "score-card";
 @use "header";
-@use "paragraph";
 @use "separator";
 @use "button";
 @use "introduction";
