--- a/prototype/styles/index.scss
+++ b/prototype/styles/index.scss
@@ -1,3 +1,4 @@
+@use "config";
 @use "base";
 @use "immutable";
 @use "title";
@@ -7,5 +8,6 @@
 @use "separator";
 @use "button";
 @use "introduction";
+@use "tile";
 @use "grid";
 @use "main";
