Make the tile animation duration and delay configurable

--- a/prototype/styles/_config.scss
+++ b/prototype/styles/_config.scss
@@ -5,6 +5,8 @@
   --tile-font-size3: 15px;
   --tile-font-size4: 15px;
   --tile-font-size5: 13px;
+  --tile-animation-duration: 200ms;
+  --tile-animation-delay: 100ms;
 }
 
 @media screen and (min-width: 520px) {
