Implement the move right algorithm
However, the animations can be finicky. If the order of the tiles
between the motion changes just slightly the animations go awry.

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -19,11 +19,13 @@
   --tile-appear-delay: 100ms;
 
   --grid-tile-move-duration: 100ms;
+  // --grid-tile-move-duration: 5000ms;
 
   --tile-pop-duration: 200ms;
+  // --tile-pop-duration: 5000ms;
   --tile-pop-delay: var(--grid-tile-move-duration);
 
-  --tile-disappear-duration: var(--tile-pop-duration);
+  --tile-disappear-duration: 0s;
   --tile-disappear-delay: var(--grid-tile-move-duration);
 
   --message-fade-in-duration: 800ms;
