Refactor the move right algorithm

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -15,10 +15,10 @@
 
   // Animation
 
-  --tile-appear-duration: 200ms;
-  --tile-appear-delay: 100ms;
-
   --grid-tile-move-duration: 100ms;
+
+  --tile-appear-duration: 200ms;
+  --tile-appear-delay: var(--grid-tile-move-duration);
 
   --tile-pop-duration: 200ms;
   --tile-pop-delay: var(--grid-tile-move-duration);
