Try to improve the tile movement animation sequence
1. Use the same ease-in-out easing function that is used by the
   original 2048 in CSS.
2. Wait for the pop animation to finish before hiding the merged
   tiles.
3. Use will-change to hint to the browser that the left and top
   properties of the tile will be changing.

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -24,7 +24,7 @@
   --tile-pop-delay: var(--grid-tile-move-duration);
 
   --tile-disappear-duration: 0s;
-  --tile-disappear-delay: var(--grid-tile-move-duration);
+  --tile-disappear-delay: calc(var(--grid-tile-move-duration) + var(--tile-pop-duration));
 
   --message-fade-in-duration: 800ms;
   --message-fade-in-delay: 1200ms;
