--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,15 +1,17 @@
+@use "responsive";
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.header__item:first-child {
+.header__title {
   margin-right: 20px;
 }
 
-@media screen and (min-width: 520px) {
+@include responsive.forLargeScreens {
   .header {
-    align-items: initial;
+    align-items: flex-start;
   }
 }
