Review and refactor the button block

--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -11,10 +11,12 @@
   font-weight: bold;
   white-space: nowrap;
 
+  cursor: pointer;
+
   background-color: colors.$squirrel;
   color: colors.$floralWhite1;
 
-  cursor: pointer;
+  will-change: transform;
 }
 
 .button:hover {
