--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "colors";
 @use "fonts";
 @use "responsive";
@@ -30,4 +31,9 @@ a {
   text-decoration: underline;
   cursor: pointer;
   color: colors.$sandstone;
+}
+
+:focus-visible,
+a:focus {
+  outline: 2px solid color.scale(colors.$squirrel, $blackness: 25%);
 }
